--- a/src/main/java/mainCurseProf/student-project/src/dao.properties
+++ b/src/main/java/mainCurseProf/student-project/src/dao.properties
@@ -1,3 +1,3 @@
-db.url=jdbc:postgresql://localhost:5432/js_student
+db.url=jdbc:postgresql://localhost:5432/jc_student
 db.login=postgres
 db.password=postgres
